Added iphone-8-plus styles to suggestions component

--- a/scss/components/_suggestions.scss
+++ b/scss/components/_suggestions.scss
@@ -10,4 +10,10 @@
         grid-template-columns: repeat(4, 1fr);
         gap: 15px;
     }
+    
+    @include iphone-8-plus {
+        &__cards-container {
+            grid-template-columns: 1fr;
+        }
+    }
 }
