--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,11 +1,12 @@
 .c-hero {
-    height: 70vh;
+    margin-top: 77px;
     background-image: url('../img/hero.png');
     background-size: cover;
     background-position: center;
     color: white;
-    
+    padding: 100px;
     &__title {
+        margin: 0;
         font-size: 3em;
         text-shadow: 1px 1px rgba(0,0,0,.25);
     }
@@ -18,7 +19,7 @@
     @include iphone-8-plus {
         font-size: 14px;
         text-align: center;
-        height: 50vh;
+        padding: 50px;
 
         &__title {
             margin-bottom: 0;
