--- a/scss/style.css
+++ b/scss/style.css
@@ -492,14 +492,16 @@ textarea {
 }
 
 .c-hero {
-  height: 70vh;
+  margin-top: 77px;
   background-image: url("../img/hero.png");
   background-size: cover;
   background-position: center;
   color: white;
+  padding: 100px;
 }
 
 .c-hero__title {
+  margin: 0;
   font-size: 3em;
   text-shadow: 1px 1px rgba(0, 0, 0, 0.25);
 }
@@ -513,7 +515,7 @@ textarea {
   .c-hero {
     font-size: 14px;
     text-align: center;
-    height: 50vh;
+    padding: 50px;
   }
   .c-hero__title {
     margin-bottom: 0;
