--- a/scss/style.scss
+++ b/scss/style.scss
@@ -108,5 +108,6 @@ section:nth-child(odd) {
 @import './components/cta-banner';
 @import './components/suggestions';
 @import './components/card';
+@import './components/month-banner';
 @import './components/footer';
 // ? </--------- COMPONENTS --------->
