--- a/scss/style.css
+++ b/scss/style.css
@@ -493,7 +493,8 @@ textarea {
 
 .c-hero {
   margin-top: 77px;
-  background-image: url("../img/hero.png");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.28)), to(rgba(0, 0, 0, 0.28))), url("../img/hero.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.28), rgba(0, 0, 0, 0.28)), url("../img/hero.png");
   background-size: cover;
   background-position: center;
   color: white;
