--- a/scss/style.scss
+++ b/scss/style.scss
@@ -109,5 +109,6 @@ section:nth-child(odd) {
 @import './components/suggestions';
 @import './components/card';
 @import './components/month-banner';
+@import './components/404';
 @import './components/footer';
 // ? </--------- COMPONENTS --------->
