Continued fixing hero image

--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,7 +1,7 @@
 .c-hero {
     margin-top: 77px;
     // background-image: url('../img/hero.png');
-    background-image: linear-gradient(rgba(0,0,0,.55),rgba(0,0,0,.55)), url("../img/car-engine.jpg");
+    background-image: linear-gradient(rgba(0,0,0,.28),rgba(0,0,0,.28)), url("../img/hero.png");
     background-size: cover;
     background-position: center;
     color: white;
